# Minesweeper-in-C

./: CMakeLists.txt  README.md  functions.h  game_screen.cpp  generate_board.cpp  main.cpp  start_screen.cpp
